--- a/about/about.css
+++ b/about/about.css
@@ -2,11 +2,14 @@ body {
   display: grid;
   place-items: center;
   height: 100vh;
-  background: rgb(212, 249, 255);
+  background-image: url('../about/images/about.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 .container {
   display: flex;
-  width: 40%;
+  width: 100vh;
+  padding: 1px;
 }
 .card {
   height: 200px;
@@ -19,7 +22,7 @@ body {
 }
 .card img{
   width: 100%;
-  height: 100%;
+  height: 70%;
   object-fit: cover;
   border-radius: 4px;
   filter: grayscale(1);
@@ -34,4 +37,18 @@ body {
   .container{
     width: 80%;
   }
+}
+
+*, html, body {
+    margin: 0;
+    padding: 0;
+}
+
+.navbar {
+  backdrop-filter: blur(6px); /* Adjust the blur value as needed */
+  background-color: rgba(0, 0, 0, 0.2); /* Adjust the background color and transparency as needed */
+}
+
+footer{
+  background-image: url('../about/images/footer.jpg');
 }
