--- a/Homescreen/homescreen.css
+++ b/Homescreen/homescreen.css
@@ -5,18 +5,33 @@ html, body {
   overflow: hidden;
 }
 
+.container {
+  display: flex;
+  height: 100%;
+}
+
+.nav {
+  flex: 0 0 auto;
+  background-color: #f1f1f1;
+  padding: 20px;
+}
+
+.map-container {
+  flex: 1 1 auto;
+  position: relative;
+}
+
 .image-container {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
 }
 
-.image-container img {
+.map {
   width: 100%;
   height: 100%;
-  object-fit: cover;
 }
 
 .point {
@@ -26,4 +41,15 @@ html, body {
   background-color: red;
   border-radius: 50%;
   cursor: pointer;
+}
+
+.hover-box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  padding: 10px;
+  display: none;
 }
