--- a/Homescreen/homescreen.css
+++ b/Homescreen/homescreen.css
@@ -53,3 +53,16 @@ html, body {
   padding: 10px;
   display: none;
 }
+
+.tooltip {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  padding: 10px;
+  border-radius: 4px;
+  display: none;
+}
+
+.point:hover .tooltip {
+  display: block;
+}
