--- a/coba2niko/parallax.css
+++ b/coba2niko/parallax.css
@@ -8,6 +8,36 @@ html{
     scroll-behavior: smooth;
 }
 
+.kota h1 {
+    position:relative; 
+    font-size:50px;
+     font-weight:700; 
+      letter-spacing:0px;
+       text-transform:uppercase; 
+       width:fit-content;
+        text-align:center; margin:auto; 
+        white-space:nowrap;
+         border:2px solid #222;
+         padding:5px 11px 3px 11px;
+         margin-top: 60px;
+  }
+  .kota h1:before, .kota h1:after {
+      background-color: #c50000;
+      position:absolute; 
+      content: '';
+      height: 9px;
+  
+      width: 9px; border-radius:50%;
+      bottom: 12px;
+  }
+  .kota h1:before {
+     left:-20px;
+  }
+  .kota h1:after {
+     right:-20px;
+  }
+
+
 .navbar {
     backdrop-filter: blur(6px); /* Adjust the blur value as needed */
     background-color: rgba(0, 0, 0, 0.2); /* Adjust the background color and transparency as needed */
@@ -62,18 +92,21 @@ html{
    bottom: 0;
 }
 
+
 .img-css img{
     width: 50%;
     height: 50%;
 }
 
 .img-prov{
-    margin: 35px;
+    /* margin: 35px; */
 }
 
+
+
 .img-prov img {
-    width: 400px;
-    height: 400px;
+    width: 250px;
+    height: 250px;
 }
 
 @media screen and (max-width: 769px) {
@@ -91,106 +124,23 @@ html{
 
 .desc-provinsi{
     width: fit-content;
-    height: fit-content;
-    background-color: aliceblue;
+    height: fit-content;   
+}
+
+.desc-provinsi p{
     padding: 10px;
-    margin-left: 20px;
+    border: 2px solid silver; 
+    box-shadow: 15px 15px silver;
+    padding: 15px; 
+    margin: 20px 0;
+    background-color: aliceblue;
 }
-
-/* body {
-    background-image: url('http://7-themes.com/data_images/out/65/6995506-wood-textured-desktop-background.jpg');
-    background-color: black;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: fixed;
-    background-size: cover;
-    background-size: no-repeat fixed center center cover;
-    overflow: hidden;
-} */
-
-.content-box {
-    position: relative;
-    width: 70px;
-    overflow: hidden;
-    max-width: fit-content;
-    min-width: fit-content;
-    max-height: fit-content;
-    min-height: fit-content;
-}
-
-.content-bg {
-    position: absolute;
-    background-size: cover;
-    background-image: url('http://7-themes.com/data_images/out/65/6995506-wood-textured-desktop-background.jpg');
-    background-color: black;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: fixed;
-    background-size: cover;
-    background-size: no-repeat fixed center center cover;
-    filter: blur(5px);
-    -webkit-filter: blur(5px);
-}
-
-.content {
-    border-radius: 10px;
-    z-index: 100;
-    background-color: black;
-    opacity: 0.7;
-    color: white;
-    }
-
-
-    @media (max-width: 768px) {
-        .carousel-inner .carousel-item > div {
-            display: none;
-        }
-        .carousel-inner .carousel-item > div:first-child {
-            display: block;
-        }
-    }
-    
-    .carousel-inner .carousel-item.active,
-    .carousel-inner .carousel-item-next,
-    .carousel-inner .carousel-item-prev {
-        display: flex;
-    }
-    
-    /* display 3 */
-    @media (min-width: 768px) {
-        
-        .carousel-inner .carousel-item-right.active,
-        .carousel-inner .carousel-item-next {
-          transform: translateX(33.333%);
-        }
-        
-        .carousel-inner .carousel-item-left.active, 
-        .carousel-inner .carousel-item-prev {
-          transform: translateX(-33.333%);
-        }
-    }
-    
-    .carousel-inner .carousel-item-right,
-    .carousel-inner .carousel-item-left{ 
-      transform: translateX(0);
-    }
-
-
-    .carousel-item img{
-        width: 50%;
-        justify-content: center;
-    }
 
     .parallax.content {
         position: relative;
-        min-height: 100vh; /* Pastikan elemen ini memiliki tinggi minimal setara dengan tinggi viewport */
+        min-height: 100vh; 
       }
       
-      #carouselExample {
-        position: absolute;
-        bottom: 0;
-        padding-bottom: 40px;
-      }
 
       #kuliner img{
         width: 69%;
@@ -215,6 +165,212 @@ html{
         height: auto;
         border-radius: 40px;
     }
+
+    .blog-slider {
+        width: 100%;
+        position: relative;
+        max-width: 800px;
+        margin: 10px auto;
+        background: #fff;
+        box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
+        padding: 15px;
+        border-radius: 25px;
+        height: 225px;
+        transition: all 0.3s;
+     }
+      @media screen and (max-width: 992px) {
+        .blog-slider {
+          max-width: 460px;
+          height: 200px;
+       }
+     }
+      @media screen and (max-width: 768px) {
+        .blog-slider {
+          min-height: 250px;
+          height: auto;
+          margin: 90px auto;
+       }
+     }
+      @media screen and (max-height: 500px) and (min-width: 992px) {
+        .blog-slider {
+          height: 165px;
+       }
+     }
+      .blog-slider__item {
+        display: flex;
+        align-items: center;
+     }
+      @media screen and (max-width: 768px) {
+        .blog-slider__item {
+          flex-direction: column;
+       }
+     }
+      .blog-slider__item.swiper-slide-active .blog-slider__img img {
+        opacity: 1;
+        transition-delay: 0.3s;
+     }
+     
+      .blog-slider__img {
+        width: 150px;
+        flex-shrink: 0;
+        height: 150px;
+        background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%);
+        box-shadow: 4px 13px 30px 1px rgba(252, 56, 56, 0.2);
+        border-radius: 20px;
+        transform: translateX(-80px);
+        overflow: hidden;
+     }
+      .blog-slider__img:after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: 20px;
+        opacity: 0.8;
+     }
+      .blog-slider__img img {
+        width: 65%;
+        height: 65%;
+        object-fit: cover;
+        display: block;
+        opacity: 0;
+        border-radius: 20px;
+        transition: all 0.3s;
+     }
+      @media screen and (max-width: 768px) {
+        .blog-slider__img {
+          transform: translateY(-50%);
+          width: 50%;
+       }
+     }
+      @media screen and (max-width: 576px) {
+        .blog-slider__img {
+          width: 50%;
+       }
+     }
+      @media screen and (max-height: 500px) and (min-width: 992px) {
+        .blog-slider__img {
+          height: 160px;
+       }
+     }
+      .blog-slider__content {
+        padding-right: 15px;
+     }
+      @media screen and (max-width: 768px) {
+        .blog-slider__content {
+          margin-top: -80px;
+          text-align: center;
+          padding: 0 15px;
+       }
+     }
+      @media screen and (max-width: 576px) {
+        .blog-slider__content {
+          padding: 0;
+       }
+     }
+      .blog-slider__content > * {
+        opacity: 0;
+        transform: translateY(25px);
+        transition: all 0.4s;
+     }
+      .blog-slider__code {
+        color: #7b7992;
+        margin-bottom: 15px;
+        display: block;
+        font-weight: 500;
+     }
+      .blog-slider__title h3{
+        font-size: 24px;
+        font-weight: 700;
+        color: #0d0925;
+        margin-bottom: 20px;
+     }
+      .blog-slider__text {
+        color: #4e4a67;
+        margin-bottom: 30px;
+        line-height: 1.5em;
+     }
+      .blog-slider__button {
+        display: inline-flex;
+        background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%);
+        padding: 15px 35px;
+        border-radius: 50px;
+        color: #fff;
+        box-shadow: 0px 14px 80px rgba(252, 56, 56, 0.4);
+        text-decoration: none;
+        font-weight: 500;
+        justify-content: center;
+        text-align: center;
+        letter-spacing: 1px;
+     }
+      @media screen and (max-width: 576px) {
+        .blog-slider__button {
+          width: 100%;
+       }
+     }
+      .blog-slider .swiper-container-horizontal > .swiper-pagination-bullets, .blog-slider .swiper-pagination-custom, .blog-slider .swiper-pagination-fraction {
+        bottom: 10px;
+        left: 0;
+        width: 100%;
+     }
+      .blog-slider__pagination {
+        position: absolute;
+        z-index: 21;
+        right: 20px;
+        width: 11px !important;
+        text-align: center;
+        left: auto !important;
+        top: 50%;
+        bottom: auto !important;
+        transform: translateY(-50%);
+     }
+      @media screen and (max-width: 768px) {
+        .blog-slider__pagination {
+          transform: translateX(-50%);
+          left: 50% !important;
+          top: 205px;
+          width: 100% !important;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+       }
+     }
+      .blog-slider__pagination.swiper-pagination-bullets .swiper-pagination-bullet {
+        margin: 8px 0;
+     }
+      @media screen and (max-width: 768px) {
+        .blog-slider__pagination.swiper-pagination-bullets .swiper-pagination-bullet {
+          margin: 0 5px;
+       }
+     }
+      .blog-slider__pagination .swiper-pagination-bullet {
+        width: 11px;
+        height: 11px;
+        display: block;
+        border-radius: 10px;
+        background: #062744;
+        opacity: 0.2;
+        transition: all 0.3s;
+     }
+      .blog-slider__pagination .swiper-pagination-bullet-active {
+        opacity: 1;
+        background: #fd3838;
+        height: 30px;
+        box-shadow: 0px 0px 20px rgba(252, 56, 56, 0.3);
+     }
+      @media screen and (max-width: 768px) {
+        .blog-slider__pagination .swiper-pagination-bullet-active {
+          height: 11px;
+          width: 30px;
+       }
+     }
+
+     .br{
+        padding-top: 3px;
+     }
+      
 
 
       
