--- a/Homescreen/homescreen.css
+++ b/Homescreen/homescreen.css
@@ -23,10 +23,14 @@ html, body {
 
 .image-container {
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 100%;
   height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .map {
@@ -65,4 +69,9 @@ html, body {
 
 .point:hover .tooltip {
   display: block;
+}
+
+.max-size {
+  max-width: 70%;
+  max-height: 50%;
 }
