--- a/Homescreen/homescreen.css
+++ b/Homescreen/homescreen.css
@@ -75,3 +75,27 @@ html, body {
   max-width: 70%;
   max-height: 50%;
 }
+
+ul.navbar {
+  list-style-type: none;
+  color: white;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+ul.navbar li {
+  display: inline-block;
+}
+
+ul.navbar li a {
+  display: block;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+ul.navbar li a:hover {
+  background-color: #111;
+}
