+ x button & + informasi singkat seputar kota

--- a/Homescreen/homescreen.css
+++ b/Homescreen/homescreen.css
@@ -54,8 +54,38 @@ html, body {
   transform: translate(-50%, -50%);
   background-color: rgba(0, 0, 0, 0.8);
   color: white;
-  padding: 10px;
+  padding: 15px;
   display: none;
+  text-align: right;
+}
+
+.hover-box p{
+  margin-left: 10px;
+  margin-right: 10px;
+  text-align: center;
+  margin-top: -10px;
+}
+
+.hover-box h1{
+  text-align: center;
+  margin-top: -20px;
+}
+
+.hover-box a{
+  color: aqua;
+}
+
+
+.hover-box img {
+  display: block;
+  margin: 0 auto;
+  width: 50%;
+  height: 50%;
+}
+
+.hover-box button{
+  text-align: right;
+  border-radius: 100px;
 }
 
 .tooltip {
@@ -72,7 +102,7 @@ html, body {
 }
 
 .max-size {
-  max-width: 70%;
+  max-width: 75%;
   max-height: 50%;
 }
 
