--- a/Homescreen/homescreen.css
+++ b/Homescreen/homescreen.css
@@ -124,6 +124,7 @@ ul.navbar li a {
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+  color:crimson;
 }
 
 ul.navbar li a:hover {
