--- a/coba2niko/parallax.css
+++ b/coba2niko/parallax.css
@@ -60,7 +60,7 @@ html{
     margin: 0 auto;
     overflow: hidden;
     position: relative;
-    width: fit-content;
+    width: 1400px;
     margin-top: 50px;
   }
   
