--- a/coba2niko/parallax.css
+++ b/coba2niko/parallax.css
@@ -60,13 +60,13 @@ html{
     margin: 0 auto;
     overflow: hidden;
     position: relative;
-    width: 1400px;
+    width: 100%;
     margin-top: 50px;
   }
   
   .slider::before,
   .slider::after {
-    background: linear-gradient(to right, white 0%, rgba(255, 255, 255, 0) 100%);
+    background: linear-gradient(to right, white 0%, rgba(255, 255, 255, 0) 20%);
     content: "";
     height: 100px;
     position: absolute;
@@ -88,7 +88,7 @@ html{
   .slider .slide-track {
     animation: scroll 40s linear infinite;
     display: flex;
-    width: calc(250px * 14);
+    width: 100%;
   }
   
   .slider .slide {
@@ -234,26 +234,28 @@ footer{
     .blog-slider {
         width: 100%;
         position: relative;
-        max-width: 800px;
-        margin: 10px auto;
+        max-width: 900px;
+        height: 100%;
+        max-height: 700px;
+        margin: 30px auto;
         background: #fff;
         box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
-        padding: 15px;
+        padding: 10px;
         border-radius: 25px;
-        height: 225px;
+        height: 180px;
         transition: all 0.3s;
      }
       @media screen and (max-width: 992px) {
         .blog-slider {
-          max-width: 460px;
-          height: 200px;
+          max-width: 500px;
+          height: 100px;
        }
      }
       @media screen and (max-width: 768px) {
         .blog-slider {
-          min-height: 250px;
+          min-height: 100px;
           height: auto;
-          margin: 90px auto;
+          margin: 70px auto;
        }
      }
       @media screen and (max-height: 500px) and (min-width: 992px) {
@@ -276,9 +278,9 @@ footer{
      }
      
       .blog-slider__img {
-        width: 150px;
+        width: 120px;
         flex-shrink: 0;
-        height: 150px;
+        height: 120px;
         background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%);
         box-shadow: 4px 13px 30px 1px rgba(252, 56, 56, 0.2);
         border-radius: 20px;
@@ -348,8 +350,8 @@ footer{
      }
       .blog-slider__title h3{
         font-size: 24px;
-        font-weight: 700;
-        color: #0d0925;
+        font-weight: 700
+        color #0d0925;
         margin-bottom: 20px;
      }
       .blog-slider__text {
@@ -501,6 +503,10 @@ footer{
 
       .icon p{
         margin-top: 35px;
+      }
+      
+      .icon-desc{
+
       }
       
       
