--- a/coba2niko/parallax.css
+++ b/coba2niko/parallax.css
@@ -95,6 +95,41 @@ html{
     height: 150px;
     width: 300px;
   }
+
+  
+input[type="text"],
+textarea {
+  width: auto;
+  border: none;
+  border-radius: 10px;
+  margin: 8px 0;
+  outline: none;
+  padding: 8px; /*allPadding = 8*/
+  box-sizing: border-box;
+  transition: 0.3s;
+}
+
+textarea {
+  text-indent: 32px; 
+}
+textarea:first-line,
+textarea:placeholder-shown {
+  line-height: 1em;
+}
+.centerForm {
+  position: relative;
+  padding: 12px 16px;
+  border-radius: 6px;
+  margin-top: 250px;
+  transition: transform 0.3s;
+}
+
+.centerForm:hover {
+  transform: translateX(60%);
+  left: 40%;
+}
+
+
   
 
 .parallax{
@@ -110,7 +145,7 @@ html{
 }
 
 .kota{
-    background-image: url('../src/gambar/jakarta/wisata/JakartaKota.jpg');
+    background-image: url('../src/gambar/jakarta/kota-jakarta.jpg');
 }
 
 .wisata{
@@ -118,7 +153,7 @@ html{
 }
 
 .kuliner{
-    background-image: url('../src/gambar/jakarta/kuliner/kuliner.jpg');
+    background-image: url('../src/gambar/jakarta/kuliner/kuliner.-jakarta.jpg');
 }
 
 footer{
@@ -274,20 +309,51 @@ footer{
      }
       .blog-slider__item.swiper-slide-active .blog-slider__img img {
         opacity: 1;
-        transition-delay: 0.3s;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        display: block;
+        border-radius: 20px;
+        transition: all 0.3s;
      }
      
-      .blog-slider__img {
+      .blog-slider__img1 {
         width: 120px;
         flex-shrink: 0;
         height: 120px;
-        background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%);
+        background-image: url('../src/gambar/jakarta/kuliner/gabus-pucung.jpeg');
+        background-size: cover;
+        background-position: center;
         box-shadow: 4px 13px 30px 1px rgba(252, 56, 56, 0.2);
         border-radius: 20px;
         transform: translateX(-80px);
         overflow: hidden;
      }
-      .blog-slider__img:after {
+     .blog-slider__img2 {
+      width: 120px;
+      flex-shrink: 0;
+      height: 120px;
+      background-image: url('../src/gambar/jakarta/kuliner/kerak-telor.jpg');
+      background-size: cover;
+      background-position: center;
+      box-shadow: 4px 13px 30px 1px rgba(252, 56, 56, 0.2);
+      border-radius: 20px;
+      transform: translateX(-80px);
+      overflow: hidden;
+   }
+   .blog-slider__img3 {
+    width: 120px;
+    flex-shrink: 0;
+    height: 120px;
+    background-image: url('../src/gambar/jakarta/kuliner/soto-betawi.jpg');
+    background-size: cover;
+    background-position: center;
+    box-shadow: 4px 13px 30px 1px rgba(252, 56, 56, 0.2);
+    border-radius: 20px;
+    transform: translateX(-80px);
+    overflow: hidden;
+ }
+      /* .blog-slider__img:after {
         content: '';
         position: absolute;
         top: 0;
@@ -296,8 +362,8 @@ footer{
         height: 100%;
         border-radius: 20px;
         opacity: 0.8;
-     }
-      .blog-slider__img img {
+     } */
+      .blog-slider__img1 img {
         width: 65%;
         height: 65%;
         object-fit: cover;
@@ -307,21 +373,73 @@ footer{
         transition: all 0.3s;
      }
       @media screen and (max-width: 768px) {
-        .blog-slider__img {
+        .blog-slider__img1 {
           transform: translateY(-50%);
           width: 50%;
        }
      }
       @media screen and (max-width: 576px) {
-        .blog-slider__img {
+        .blog-slider__img1 {
           width: 50%;
        }
      }
       @media screen and (max-height: 500px) and (min-width: 992px) {
-        .blog-slider__img {
+        .blog-slider__img1 {
           height: 160px;
        }
      }
+
+     .blog-slider__img2 img {
+      width: 65%;
+      height: 65%;
+      object-fit: cover;
+      display: block;
+      opacity: 0;
+      border-radius: 20px;
+      transition: all 0.3s;
+   }
+    @media screen and (max-width: 768px) {
+      .blog-slider__img2 {
+        transform: translateY(-50%);
+        width: 50%;
+     }
+   }
+    @media screen and (max-width: 576px) {
+      .blog-slider__img2 {
+        width: 50%;
+     }
+   }
+    @media screen and (max-height: 500px) and (min-width: 992px) {
+      .blog-slider__img2 {
+        height: 160px;
+     }
+   }
+
+   .blog-slider__img3 img {
+    width: 65%;
+    height: 65%;
+    object-fit: cover;
+    display: block;
+    opacity: 0;
+    border-radius: 20px;
+    transition: all 0.3s;
+ }
+  @media screen and (max-width: 768px) {
+    .blog-slider__img3 {
+      transform: translateY(-50%);
+      width: 50%;
+   }
+ }
+  @media screen and (max-width: 576px) {
+    .blog-slider__img3 {
+      width: 50%;
+   }
+ }
+  @media screen and (max-height: 500px) and (min-width: 992px) {
+    .blog-slider__img3 {
+      height: 160px;
+   }
+ }
       .blog-slider__content {
         padding-right: 15px;
      }
@@ -338,9 +456,8 @@ footer{
        }
      }
       .blog-slider__content > * {
-        opacity: 0;
-        transform: translateY(25px);
-        transition: all 0.4s;
+        opacity: 1;
+        transform: translateY(0);
      }
       .blog-slider__code {
         color: #7b7992;
@@ -463,7 +580,9 @@ footer{
       
       .cont-items {
         color: white;
-        background-color: rgba(255, 255, 255, 0.2);
+        background-image: url('../src/gambar/jakarta/wisata/wisata-taman-mini.jpeg');
+        background-repeat: no-repeat;
+        background-size: cover;
         height: 80vh;
         width: 150px;
         border: solid 5px;
