--- a/coba2niko/parallax.css
+++ b/coba2niko/parallax.css
@@ -116,10 +116,14 @@ textarea:first-line,
 textarea:placeholder-shown {
   line-height: 1em;
 }
+
 .centerForm {
-  [contenteditable] {
     outline: 0px solid transparent;
-  }
+    width: fit-content;
+    height: fit-content;
+    background-color: aliceblue;
+    border-radius: 20px;
+    margin-top: 200px;
 }
 
 .centerForm:hover {
@@ -162,7 +166,7 @@ footer{
     height: fit-content;
     bottom: 0;
     left: 0;
-    padding-top: 20px ;
+    padding-top: 50px ;
   }
 
 .css-jakarta{
@@ -589,6 +593,7 @@ footer{
         transition: border-radius 625ms, width 625ms;
         user-select: none;
         isolation: isolate;
+        background-image: url('../src/gambar/jakarta/wisata/wisata-taman-mini.jpeg');
       }
       
 
@@ -600,6 +605,7 @@ footer{
         opacity: 1;
         width: 90vw;
         border-radius: 50px;
+        transition: border-radius 625ms, width 625ms;
       }
 
       
@@ -613,12 +619,16 @@ footer{
         text-align: center;
         grid-area: 1/1;
         transition: width 1000ms;
-        translate: 0 20px;
       }
 
       .icon p{
         margin-top: 35px;
       }
+
+      .cont-items:hover .centerForm {
+        width: 100%; /* Atur lebar sesuai kebutuhan */
+      }
+      
       
       
       
