--- a/coba2niko/parallax.css
+++ b/coba2niko/parallax.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    width: 100%;
 }
 
 html{
@@ -195,9 +196,11 @@ footer{
     height: 50%;
 }
 
+/*
 .img-prov{
-    /* margin: 35px; */
+    margin: 35px;
 }
+*/
 
 
 
