--- a/coba2niko/parallax.css
+++ b/coba2niko/parallax.css
@@ -128,14 +128,12 @@ textarea:placeholder-shown {
 }
 
 
-  
-
 .parallax{
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
     width: 100%;
-    height: 100vh;
+    height: 100%;
 }
 
 .blank{
@@ -161,9 +159,9 @@ footer{
   .footer {
     width: 100%;
     height: fit-content;
-    bottom: 0;
-    left: 0;
-    padding-top: 20px ;
+    bottom: fit-content;
+    left: fit-content;
+    padding-top: 20px;
   }
 
 .css-jakarta{
