--- a/Kota/Jakarta/jakarta.css
+++ b/Kota/Jakarta/jakarta.css
@@ -173,6 +173,8 @@ translate: 0 20px; */
 
 footer{
     background-image: url('./jakarta-img/footer.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
   }
   
   .footer {
@@ -180,7 +182,8 @@ footer{
     height: fit-content;
     bottom: 0;
     left: 0;
-    padding-top: 50px ;
+    padding-top: 50px;
+    color:rgb(255, 255, 255);
   }
 
   footer img{
