--- a/about/about.css
+++ b/about/about.css
@@ -54,7 +54,9 @@ body {
 }
 
 footer{
-  background-image: url('../about/images/footer.jpg');
+  background-image: url('./images/footer.png');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .footer {
@@ -63,4 +65,6 @@ footer{
   position: fixed;
   bottom: 0;
   left: 0;
+  color:rgb(255, 255, 255);
 }
+
