--- a/Homescreen/homescreen.css
+++ b/Homescreen/homescreen.css
@@ -112,7 +112,9 @@ ul.navbar {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
+  background-color: rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(5px); /* dius as desired */
+  -webkit-backdrop-filter: blur(5px);
 }
 
 ul.navbar li {
