--- a/Kota/Sorong/sorong.css
+++ b/Kota/Sorong/sorong.css
@@ -661,7 +661,7 @@ footer{
         transition: border-radius 625ms, width 625ms;
         user-select: none;
         isolation: isolate;
-        background-image: url('./sorong-img/wisata/Air\ Terjun\ Sasnek.jpeg');
+        background-image: url('./sorong-img/wisata/Air_Terjun_Sasnek.jpeg');
       }
       
 
